feat: companies crud
