# internal/router/company/company_router.go
@@ -1,0 +1,23 @@
+package company
+
+import (
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+	present "hta/internal/presenter/company"
+	"hta/internal/router/middleware"
+)
+
+func GetRouter(router *gin.Engine, db *gorm.DB) *gin.Engine {
+	control := present.Init(db)
+	v10 := router.Group("hta-gantt").Group("v1.0").Group("companies")
+	{
+		v10.POST("", middleware.Verify(), middleware.CheckPermission(), middleware.Transaction(db), control.Create)
+		v10.GET("", middleware.Verify(), middleware.CheckPermission(), control.GetByList)
+		v10.GET("no-pagination", middleware.Verify(), middleware.CheckPermission(), control.GetByListNoPagination)
+		v10.GET(":id", middleware.Verify(), middleware.CheckPermission(), control.GetBySingle)
+		v10.DELETE(":id", middleware.Verify(), middleware.CheckPermission(), control.Delete)
+		v10.PATCH(":id", middleware.Verify(), middleware.CheckPermission(), control.Update)
+	}
+
+	return router
+}
